--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -51,8 +51,7 @@ a
       box-shadow: none
 
 .confirm_preorder
-  margin-bottom: 80px
-
+  margin: 20px 0 50px 0
 .alert-success
   background-color: $mint
   color: black
