--- a/app/views/preorder_mailer/new_preorder.html.slim
+++ b/app/views/preorder_mailer/new_preorder.html.slim
@@ -17,7 +17,7 @@ hr
       = @preorder.comments
   h3
     |Время заказа: &nbsp;
-    = @preorder.created_at.strftime("%T")
+    = @preorder.created_at.strftime("%H:%M")
   h2
     |Стоимость:&nbsp;
     = @preorder.drink.price
