--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta content="width=device-width, initial-scale=1" name="viewport"
+    meta name="fragment" content="!"
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     script src="//vk.com/js/api/openapi.js?120" type="text/javascript"
