--- a/app/assets/stylesheets/sign_in.sass
+++ b/app/assets/stylesheets/sign_in.sass
@@ -12,12 +12,12 @@
     height: 200px
 
 body
-  > .grid
+  > .admin_sign_in_box
     height: 100%
+    .column
+      max-width: 450px
+    .image
+      margin-top: -100px
 
-.image
-  margin-top: -100px
 
-.column
-  max-width: 450px
 
