--- a/app/views/preorder_mailer/new_preorder.html.slim
+++ b/app/views/preorder_mailer/new_preorder.html.slim
@@ -8,7 +8,7 @@ h3
   | Сироп(ы):&nbsp;
   - @preorder.syurups.each do |syurup|
     = syurup.name
-    |&nbsp;
+    |;&nbsp;
 
 hr
   = if @preorder.comments.present?
