--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,11 +1,19 @@
 doctype html
 html
   head
-    title WakeUp! NSU
+    title WakeUp! NSU - Сервис предзаказов кофе в НГУ
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta content="width=device-width, initial-scale=1" name="viewport"
     meta name="fragment" content="!"
+    meta name="author" content="ev1lcap"
+    meta name="description" content="WakeUp! NSU - Это сервис предзаказа кофе. Если пара подходит к концу и вы не хотите стоять в очереди - просто закажите кофе заранее! Мы позаботимся, чтобы он был свежесваренным и горячим!"
+    meta name="keywords" content="WakeUp!,NSU,Wake,Up,Вейк,Ап,ВейкАп,НГУ,кофе,предзаказ,предзаказ кофе, люблю кофе, федорук, любимый кофе,зоро,фарик,под лестницей."
+    meta property="og:type" content="article"
+    meta property="og:title" content="WakeUp! NSU - Сервис предзаказов кофе в НГУ"
+    meta property="og:description" content="WakeUp! NSU - Это сервис предзаказа кофе. Если пара подходит к концу и вы не хотите стоять в очереди - просто закажите кофе заранее! Мы позаботимся, чтобы он был свежесваренным и горячим!"
+    meta property="og:url" content="http://nsuwakeup.ru"
+    meta property="og:image" content=image_path("logo.jpg")
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     script src="//vk.com/js/api/openapi.js?120" type="text/javascript"
