--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -28,7 +28,9 @@ section
 
 .card
   img
-    width: 100%
+    width: 200px
+    margin: 0 auto
+    text-align: center
     height: 300px !important
 
 .additional
