--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -27,9 +27,12 @@ section
     margin-bottom: 20px !important
 
 .card
-  background-color: white !important
+  .image
+    background-color: white !important
+  &.syurup
+    img
+      width: 150px !important
   img
-    width: 150px !important
     margin: 0 auto
     height: 300px !important
 
