--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -50,3 +50,10 @@ span.text-mint, a
 
 .step.first
   cursor: pointer
+
+.disabled_service
+  height: 40px
+  width: 100%
+  position: absolute
+  top: 50%
+  margin-top: -20px
