--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -5,3 +5,8 @@
   background-color: $white !important
   box-shadow: 0px 0px 0px 2px $mint inset !important
 
+.ui.button
+  border-radius: 20px !important
+  &.vk
+    width: 200px
+
